Fixed padding-top in footer and letter-spacing

--- a/app/assets/stylesheets/footer.css.scss
+++ b/app/assets/stylesheets/footer.css.scss
@@ -4,20 +4,24 @@ html {
   position: relative;
   min-height: 100%;
 }
+
 body {
   /* Margin bottom by footer height */
   margin-bottom: 60px;
 }
+
 .footer {
-  position: absolute;
+  padding-top: 20px;
+	position: absolute;
   bottom: 0;
   width: 100%;
   /* Set the fixed height of the footer here */
-  height: 60px;
+  height: 80px;
   background-color: rgba(0,0,0,0.5);
   font-family: 'Amatic SC', cursive;
   font-size: 17px;
   color: white;
+	letter-spacing: 2px;
 }
 
 .footer a {
